# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-02-03 17:23:56 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-72


    modified files:
     ChangeLog Makefile gencabal.py


2005-02-03 16:58:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-71

    Summary:
      Checkpointing with new build system
    Revision:
      missingexts--head--0.7--patch-71


    new files:
     gencabal.py

    removed files:
     MissingPy.cabal

    modified files:
     ChangeLog Makefile MissingPy/AnyDBM.hs testsrc/AnyDBMPytest.hs


2005-02-03 15:52:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-70

    Summary:
      tests run
    Revision:
      missingexts--head--0.7--patch-70


    new files:
     testsrc/AnyDBMPytest.hs testsrc/AnyDBMtest.hs

    removed files:
     MissingPy/AnyDBM/.arch-ids/=id

    modified files:
     ChangeLog MissingPy/AnyDBM.hs testsrc/Tests.hs

    removed directories:
     MissingPy/AnyDBM MissingPy/AnyDBM/.arch-ids


2005-02-03 15:32:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-69

    Summary:
      fixed compilation errors
    Revision:
      missingexts--head--0.7--patch-69


    modified files:
     ChangeLog MissingPy/AnyDBM.hs


2005-02-03 15:29:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-68

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-68


    modified files:
     ChangeLog MissingPy.cabal MissingPy/AnyDBM.hs
     Python/Objects/Dict.hs


2005-02-03 15:00:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-67


    new files:
     MissingPy/AnyDBM.hs MissingPy/AnyDBM/.arch-ids/=id

    modified files:
     ChangeLog

    new directories:
     MissingPy/AnyDBM MissingPy/AnyDBM/.arch-ids

